assets/css/responsive.css
/* Mobile & Tablet */
@media (max-width: 63.9375em) {
  .hide-on-mobile-tablet {
    display: none;
  }

  .header {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 10;
  }

  .cart__content {
    padding: 0 calc((100% - 644px) / 2);
    position: fixed;
    top: var(--header-height);
    right: 0.5px;
    width: 100%;
  }

  .cart__content::after {
    display: none;
  }

  .header__sort-bar {
    display: flex;
  }

  .mobile-category__list {
    display: flex;
  }

  .article {
    margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
  }

  .article__content {
    padding-top: 8px;
  }
}

/* Tablet */
@media (min-width: 46.25em) and (max-width: 63.9375em) {
  :root {
    --header-height: 68px; 
    --nav-height: 0px;
  }

  .hide-on-tablet {
    display: none;
  }

  .cart {
    width: 80px;
    text-align: right;
  }
}

/* Mobile */
@media (max-width: 46.1875em) {
  :root {
    --header-height: 54px; 
    --nav-height: 0px;
  }

  .hide-on-mobile {
    display: none;
  }

  .header-with-search {
    justify-content: space-between;
  }

  .logo, .cart {
    width: unset;
  }

  .logo__img {
    width: 156px;
  }

  .mobile-search {
    display: inline-block;
  }

  .search {
    border: 1px solid #e5e5e5;
    padding: 0 16px;
    position: fixed;
    top: var(--header-height);
    right: 0;
    left: 0;
    display: none;
    height: var(--header-sort-bar-height);
    z-index: 1;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
    animation: mobileSearchSideIn linear 0.3s;
  }

  @keyframes mobileSearchSideIn {
    from {
      top: calc(var(--header-height) / 2);
      opacity: 0;
    }
    to {
      top: var(--header-height);
      opacity: 1;
    }
  }

  .search__history {
    position: fixed;
    top: calc(var(--header-height) + var(--header-sort-bar-height));
    width: 100%;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  }

  .article__content {
    margin: 0 4px;
  }

  .pagination__item {
    margin: 0;
  }

  .pagination__link {
    --height: 28px;
    min-width: 36px;
    font-size: 1.6rem;
  }

  .footer__content {
    padding: 0 16px;
  }

  .footer__heading {
    text-align: center;
  }

  .footer__item-link, 
  .footer__download {
    justify-content: center;
  }

  .footer__apps {
    flex: unset;
  }

  .footer__apps-link {
    padding: 6px 8px;
    display: block;
  }
}

